# GUI-Apps

./: .gitignore  ArduinoUhr.geany  CMakeLists.txt  LICENSE.md  README.md  RaspiMediaList.pro  RaspiMediaList_de.ts  blink.geany  createEclipseProjects.sh  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  name.geany  qinputdialogex.cpp  qinputdialogex.h  readme.md  test1.txt
Arduino/Sketches/: .gitignore
Arduino/libraries/: .gitignore
Eagle/: .gitignore  ServoSteuerSchaltung.sch
Eagle/3LED voltage Level Meter/: VoltageLevelMeter.TXT  VoltageLevelMeter1.sch  VoltageLevelMeter3.brd  VoltageLevelMeter3.sch  Voltagemeter2.ods
Eagle/3LED-voltage-Level-Meter/: VoltageLevelMeter1.brd  VoltageLevelMeter2.brd  VoltageLevelMeter2.sch  VoltageLevelMeter3.brd  VoltageLevelMeter3.sch
Eagle/5LED Voltage Level Meter/: 5 LED Voltage Level Meter.brd  5 LED Voltage Level Meter.sch  DESCRIPTION
Eagle/Arduino/: Arduino_S3v3_R2.hpglx  Arduino_S3v3_R2_a.brd  Arduino_S3v3_R2_a.sch  Arduino_S3v3_R2_b.brd  Arduino_S3v3_R2_b.sch
Eagle/Ausgangsverstärker/: AusgangsVerstärker.brd  AusgangsVerstärker.sch  Ausgangsverstärker_50_Ohm.brd  Ausgangsverstärker_50_Ohm.sch  DESCRIPTION  PowerAmpTA7270.asc  PowerAmpTA7270.brd  PowerAmpTA7270.sch  PowerAmpTDA2005.brd  PowerAmpTDA2005.sch
Eagle/Batterie_Bohrhammer/: Batterie.brd  Batterie.s#1  Batterie.sch  Batterie1.brd  Batterie2.brd
Eagle/Battery-Loader/: Balancer.brd  Balancer.sch  DESCRIPTION  LiIonLader_1ZelleMax500mA.brd  LiIonLader_1ZelleMax500mA.sch  LiIonLader_1ZelleMax800mA.brd  LiIonLader_1ZelleMax800mA.sch  lopo_ics.brd  lopo_ics.sch
Eagle/Drehzahlregler-Einfach/: DESCRIPTION  Drehzahlregler-Einfach.brd  Drehzahlregler-Einfach.sch
Eagle/Elektronik Experimente_mit_Steckboard/: DESCRIPTION  Kippstufe astabil.brd  Kippstufe astabil.sch  Steckboard.brd  Steckboard.tif
Eagle/Fahrradbeleuchtung/: SV60mAHelleLEDs.brd  SV60mAHelleLEDs.sch  SV60mALEDs.brd  SV60mALEDs.sch  SVmitTreiber3LED.brd  SVmitTreiber3LED2.brd  SVmitTreiber3LED2.sch  SpannungsverdopplerMit3LED.brd  SpannungsverdopplerMit3LED_1.brd  SpannungsverdopplerMit3LED_1.sch  SpannungsverdopplerMit3LED_2.sch  strombegrenzung_npn.brd  strombegrenzung_npn.sch  strombegrenzung_pnp.brd  strombegrenzung_pnp.sch
Eagle/LED-Treiber/: DESCRIPTION  LED-Treiber1.brd  LED-Treiber1.sch
Eagle/Leuchtende_Untertasse/: DESCRIPTION  Leuchtende_Untertasse.brd  Leuchtende_Untertasse.sch
Eagle/Messgeraet/: DESCRIPTION  Messgeraet.brd  Messgeraet.sch
GitView/cmake_qt6/: .gitignore  CMakeLists.txt
Installer/: .gitignore  debian_package.sh  langs.model.xml  oscilloscope.desktop  setup_MSVC15.iss  setup_MSVC17.iss  setup_MinGW.iss
Java/: .gitignore
Kikad/: Test-cache.lib  Test.bak  Test.pro  Test.sch
LinuxDrivers/: .gitignore
Oscilloscope/cmake_qt5/: CMakeLists.txt
Qt/: .gitignore
Qt/ArduinoUnittest/: .gitignore  CMakeLists.txt  files.txt
Qt/ArduinoUnittest/ArduinoUnittest/: AlarmLeuchte.cpp  Arduino.cpp  Arduino.h  ArduinoUnittest.pro  ArduinoUnittestConfigurableDelayTimer.pro  ArduinoUnittestFunctionGenerator.pro  ArduinoUnittestJoystick.pro  ArduinoUnittestMenu.pro  ArduinoUnittestOctansSimulator.pro  ArduinoUnittestPinController.pro  ArduinoUnittestSimple.pro  ArduinoUnittestSimpleMenu.pro  ArduinoUnittest_ClockWithTimer.pro  ArduinoUnittest_binaer_analog_uhr.pro  EEPROM.cpp  EEPROM.h  FunctionGeneratorIno.cpp  Joystickino.cpp  LiquidCrystal.cpp  LiquidCrystal.h  OctansSimulatorino.cpp  Print.cpp  SimpleMenu.cpp  SimpleMenuino.cpp  StepperIno.cpp  WProgram.h  WString.cpp  WString.h  Wire.cpp  Wire.h  arduinoworker.cpp  arduinoworker.h  clock_with_timer.cpp  configurabledelaytimerino.cpp  logger.h  logic_analyser.cpp  logic_analyser.h  logic_analyser.ui  logicview.cpp  logicview.h  (+7 more)
Qt/Oscilloscope/: .gitignore  CMakeLists.txt
Qt/Oscilloscope/Installer/: setup_MSVC15.iss
Qt/Oscilloscope/source/: FFT.cpp  Oscilloscope.pro  PolyLineItem.h  TriggerParameter.h  aboutdlg.cpp  circlevector.h  doxygen.config  events.cpp  fft_view.cpp  fft_view.h  functiongenerator.cpp  functiongenerator.h  functiongenerator.ui  functions.h  generatefunction.cpp  logger.cpp  main.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  matrix.h  qaudiooutstream.cpp  qaudiorecord.cpp  qdoublelablewithunit.h  qwidgetitemdelegate.cpp  scopesettings.h  scopesettings.ui  scopeview.cpp  settings.cpp  simd.h  sse_helper.cpp  sse_helper.h
Qt/Oscilloscope/source/resource/: resource.rc
Qt/acalc/: .gitignore  CMakeLists.txt
Qt/acalc/src/: acalc.pro  carithmetic.cpp  carithmetic.h  main.cpp
Qt/syslogger/: .gitignore  CMakeLists.txt
Qt/syslogger/Installer/: setup_MSVC17.iss
Qt/syslogger/resources/: syslogger.rc
Qt/syslogger/src/: asyncqueue.h  main.cpp  receiverthread.cpp  receiverthread.h  syslogger.pro  sysloggerwidget.cpp  sysloggerwidget.h  sysloggerwidget.ui
Raspi/: .gitignore
RaspiMediaList/: RaspiMediaList.pro  logger.cpp  mainwindow.cpp  mainwindow.ui
RaspiMediaList/cmake_qt5/: CMakeLists.txt
RaspiMediaList/cmake_qt6/: CMakeLists.txt
RaspiMediaList/cmake_qt6/.qt/: QtDeploySupport.cmake
RecentFiles/: RecentFiles.pro  RecentFiles.pro.user.3.2-pre1  mainwindow.cpp  mainwindow.h  mainwindow.ui
RecentFiles/cmake_qt5/: CMakeLists.txt
RecentFiles/cmake_qt6/: CMakeLists.txt
resource/: resource.qrc
samples/: first_bin_test.json  struct2_string_array.json
source/: .gitignore  .mainwindow.cpp.swo  Channel.cpp  Channel.h  DirectIoDevice.cpp  DisplayType.cpp  DisplayType.h  FFT.cpp  FFT.h  GitView.pro  GitView_de.ts  Oscilloscope.pro  TriggerParameter.cpp  TriggerParameter.h  aboutdlg.cpp  aboutdlg.ui  actions.cpp  actions.h  audiosettings.cpp  audiosettings.h  binary_values_view.cpp  binary_values_view.h  binary_values_view.ui  circlevector.h  code_browser.cpp  code_browser.h  combinecurves.cpp  commit_graphics_item.cpp  commit_graphics_item.h  commitmessage.cpp  commitmessage.h  cursors.cpp  customgitactions.cpp  customgitactions.h  customgitactions.ui  data_exchange.h  editable.cpp  editable.h  fft_view.h  filterfunctions.cpp  (+66 more)
spice/: test.sch  test.sch~
(+7934 files in other folders)
